--- a/Banda1/Banda1/src/main/resources/templates/fragmentos/menu.html
+++ b/Banda1/Banda1/src/main/resources/templates/fragmentos/menu.html
@@ -18,10 +18,12 @@
 		<div class="container-fluid">
 			<span class="text-danger fs-5 fx-bold"><a href="/inicio"><img th:src="@{media/logo.png}"
 						class="d-block w-100" alt="logo" width="100" height="100"></a></span>
+						
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
 				aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
+			
 			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 				<div class="navbar-nav">
 					<ul class="nav navbar-nav">
@@ -47,7 +49,12 @@
 
 
 					</ul>
-				</div>
+					
+					<span class="navbar-text pe-4 fs-5">
+						<p sec:authorize="isAuthenticated()" sec:authentication="name" ></p>
+					</span >
+					
+				</div> 
 			</div>
 		</div>
 	</nav>
