--- a/Banda1/Banda1/src/main/resources/templates/login.html
+++ b/Banda1/Banda1/src/main/resources/templates/login.html
@@ -3,25 +3,66 @@
 <html xmlns:th="http://www.thymeleaf.org" 
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-<head>
-    <title>Ejemplo de Seguridad - Zona Pública</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
+    <head>
+        <meta charset='utf-8'>
+        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+        <title>Rosario de Cádiz</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <link rel='stylesheet' type='text/css' media='screen' href='prinipal.css'>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    
+    </head>
 
 <body>
-    <h1>Bienvenido a la zona pública</h1>
-    <!--<a th:href="@{/private}">Zona privada</a> | <a th:href="@{/admin}">Zona admin</a>-->
+
+    <div class="d-flex flex-column min-vh-100 justify-content center align-items-center" id="template-bg-3">
+
+        <div class="card mb-5 p-5 bg-dark bg-gradient text-white col-md-4">
+           
+            <div class="card-header text-center">
+                <h3>LOGIN</h3>
+            </div>
+
+            <div class="card-body mt-3">
+                
+                <form method="POST" th:action="@{/login}" sec:authorize="!isAuthenticated()">
+
+                    <div class="input-group form-group mt-3">
+                        <input type="text" class="form-control text-center p-3" name="username" id="username" placeholder="username" autofocus="autofocus" /> <br />
+                    </div>
+
+                    <div class="text-center">
+                        <input type="password" class="form-control text-center p-3" name="password" id="password" placeholder="password" /> <br />
+                    </div>
+
+                    <div class="text-center">
+                        <input type="submit" value="Enviar" class="btn btn-primary mt-3 w-100 p-2" />
+                    
+                    </div>
+                </form>
+
+
+            </div>
+        </div>
+
+    </div>
+    
+
+
+
     <p th:if="${loginError}" class="error">Error en el nombre de usuario y/o contraseña</p>
-    <form method="POST" th:action="@{/login}" sec:authorize="!isAuthenticated()">
-        <label for="username">Nombre de usuario: </label>
-        <input type="text" name="username" id="username" placeholder="Nombre de usuario" autofocus="autofocus" /> <br />
-        <label for="password">Contraseña: </label>
-        <input type="password" name="password" id="password" placeholder="Contraseña" /> <br />
-        <input type="submit" value="Enviar" />
-    </form>
+   
+       
+        
+        
+        
+   
+   
     <div sec:authorize="isAuthenticated()">
         <p sec:authentication="name">Nombre </p>
         <a th:href="@{/logout}">Salir</a>
+    
     </div>
 </body>
 
